# CMakeTemplate

./: CMakeLists.txt  README.md  init_template.sh
benchmark/: CMakeLists.txt
benchmark/__lib__/: CMakeLists.txt  __lib___bench.cpp  demo_bench.cpp
benchmark/lib/: CMakeLists.txt  demo_bench.cpp
cmake/: Options.cmake
scripts/: update_template.py
src/: CMakeLists.txt
src/__app__/: CMakeLists.txt  __app__.cpp
src/__lib__/: CMakeLists.txt  __lib__.cpp
src/__lib__/include/__lib__/: __lib__.h
src/__lib__/include/__namespace__/__lib__/: __lib__.h
src/app/: CMakeLists.txt  console_app.cpp
src/lib/: CMakeLists.txt  demolib.cpp
src/lib/include/lib/: demolib.h
test/: CMakeLists.txt
test/__lib__/: CMakeLists.txt  __lib___test.cpp
test/app/: app_test.cpp
test/lib/: CMakeLists.txt  lib_test.cpp
